--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
     position: absolute;
     width: 300%;
     bottom: 0;
-    left: calc(var(--lef) * 1%);
+    left: calc(var(--left) * 1%);
 }
 
 .dino {
